<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editText_val1"
        style="@android:style/Widget.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/hint"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textSize="15dp" />

    <EditText
        android:id="@+id/editText_val2"
        style="@android:style/Widget.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:ems="10"
        android:gravity="center_vertical|center_horizontal"
        android:hint="@string/hint"
        android:inputType="numberDecimal"
        android:padding="10dp"
        android:textSize="15dp" />

    <RadioGroup
        android:id="@+id/radioGroup_operations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp">

        <RadioButton
            android:id="@+id/radioButton_addition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/add"
            android:checked="true"
            android:padding="5dp"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/radioButton_substraction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/substract"
            android:padding="5dp"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/radioButton_multiplication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/multiply"
            android:padding="5dp"
            android:textSize="15dp" />

        <RadioButton
            android:id="@+id/radioButton_division"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/divide"
            android:padding="5dp"
            android:textSize="15dp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/reset"
            android:padding="5dp"
            android:textSize="15dp" />

        <Button
            android:id="@+id/button_equals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/equals"
            android:padding="5dp"
            android:textSize="15dp" />

        <Button
            android:id="@+id/button_leave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/leave"
            android:padding="5dp"
            android:textSize="15dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/result"
            android:padding="5dp"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/textView_res"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:ems="10"
            android:gravity="center_vertical|center_horizontal"
            android:padding="5dp"
            android:textSize="15dp" />

    </LinearLayout>

</LinearLayout>